--- a/index-style.css
+++ b/index-style.css
@@ -10,6 +10,14 @@ body {
 @media (max-width: 499px) {
   div[id=content] > h1::before {
     content: "Posters!!"; } }
+.zoom {
+  transition: transform .2s ease;
+  /* Animation */ }
+
+.zoom:hover {
+  transform: scale(1.5);
+  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */ }
+
 a:link {
   color: black; }
 
