--- a/index-style.scss
+++ b/index-style.scss
@@ -20,6 +20,16 @@ $table-color : black;
   }
 }
 
+.zoom{
+  transition: transform .2s ease; /* Animation */
+
+}
+.zoom:hover {
+  
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  
+}
+
 a:link{
   color: black;
 }
